1. Added Blogs, Users DB models. 2. Created endpoints for authentication and blog related api. 3. Seperated the endpoints into respective files. 4. Created types js file -- ENV type for Hono

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -14,12 +14,13 @@ dist/
 # deps
 node_modules/
 .wrangler
+wrangler.toml
 
 # env
 .env
 .env.production
 .dev.vars
-./src/config.json
+src/config.*
 
 # logs
 logs/
