--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,13 @@
   "name": "backend",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify"
+    "deploy": "wrangler deploy --minify",
+    "migrate": "prisma migrate dev",
+    "generate": "prisma generate --no-engine"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.1",
+    "@prisma/extension-accelerate": "^1.2.1",
     "hono": "^4.6.16",
     "prisma": "^6.2.1"
   },
