--- a/frontend/config.json
+++ b/frontend/config.json
@@ -1,3 +1,8 @@
 {
-    "backend_url": "https://backend.nikhilbhat021-office.workers.dev/api/v1"
+    "backend_url_local":
+        "http://localhost:8787/api/v1",
+    "backend_url_web":
+        "https://backend.nikhilbhat021-office.workers.dev/api/v1",
+    "backend_url":
+        "https://backend.nikhilbhat021-office.workers.dev/api/v1"
 }
